--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <h1>Task Tracker</h1>
+            <h1>Coffee Journal</h1>
         </header>
         <form id="taskform">
             <div class="form-row">
