adding basic fill animation for buttton

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
             <div class="top-white-space"></div>
             <div class="heading">
                 <h1>Coffee.</h1>
-                <button>Add New</button>
+                <button class="fill">Add New</button>
             </div>
             <div class="content">
                 <section id="coffee-info">
@@ -145,7 +145,7 @@
             <div class="top-white-space"></div>
             <div class="heading">
                 <h1>Gadget.</h1>
-                <button>Add New</button>
+                <button class="fill">Add New</button>
             </div>
             <div class="content">
                 <!-- a glide carousel structure -->
@@ -201,7 +201,7 @@
     <section id="brew">
         <div class="heading">
             <h1>Brew.</h1>
-            <button>Add New</button>
+            <button class="fill">Add New</button>
         </div>
         <div class="content">
             <div class="list-th  col-grid">
@@ -240,7 +240,7 @@
                             <div class="flex-item">
                                 <h3>Tasting.</h3>
                             </div>
-                            <button class="flex-item">Delete</button>
+                            <button class="flex-item fill">Delete</button>
                         </div>
                     </div>
                 </article>
