adding smart sticky topnavigation successfully

--- a/public/index.html
+++ b/public/index.html
@@ -11,20 +11,18 @@
 </head>
 
 <body>
-    <header>
-        <nav class="nav" id="top-nav">
-            <a href="#landing-page"><img src="/public/src/images/logo.png" alt="logo of brew journal" height="35px"></a>
-            <a href="#overview">Overview</a>
-            <a href="#coffee">Coffee</a>
-            <a href="#gadget">Gadget</a>
-            <a href="#brew">Brew</a>
-            <a href="javascript:void(0);" id="menu-toggle" onclick="togglemenu()">
-                <div class="menu-toggle__bar1"></div>
-                <div class="menu-toggle__bar2"></div>
-                <div class="menu-toggle__bar3"></div>
-            </a>
-        </nav>
-    </header>
+    <nav id="top-nav">
+        <a href="#landing-page"><img src="/public/src/images/logo.png" alt="logo of brew journal" height="35px"></a>
+        <a href="#overview">Overview</a>
+        <a href="#coffee">Coffee</a>
+        <a href="#gadget">Gadget</a>
+        <a href="#brew">Brew</a>
+        <a href="javascript:void(0);" id="menu-toggle" onclick="togglemenu()">
+            <div class="menu-toggle__bar1"></div>
+            <div class="menu-toggle__bar2"></div>
+            <div class="menu-toggle__bar3"></div>
+        </a>
+    </nav>
     <section id="landing-page">
         <h1>It's time to elevate your brewing experience.</h1>
         <figure><img src="/public/src/images/hero-image.png" height="450px"" alt=" An image of a cup of black coffee
@@ -306,9 +304,10 @@
     </form>
     <h2>Tasks</h2>
     <ul id="tasklist"></ul> -->
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
     <script type="module" src="glide-carousel.js"></script>
     <script type="module" src="accordion.js"></script>
+    <script src="navigation.js"></script>
 </body>
 
 </html>
