format the hero section and fix nav bar issue

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <!-- the reason i omit header here is to make the navigation bar work as I expected -->
+    <!-- it need enough height to be sticky through the whole page, so instead of nesting it inside the header, it is better to directly nest it into body element -->
     <nav id="top-nav">
         <a href="#landing-page"><img src="/public/src/images/logo.png" alt="logo of brew journal" height="35px"></a>
         <a href="#overview">Overview</a>
@@ -24,8 +26,8 @@
         </a>
     </nav>
     <section id="landing-page">
-        <h1>It's time to elevate your brewing experience.</h1>
-        <figure><img src="/public/src/images/hero-image.png" height="450px"" alt=" An image of a cup of black coffee
+        <h1>It’s time to elevate your<br>brewing experience.</h1>
+        <figure><img src="/public/src/images/hero-image.png" alt=" An image of a cup of black coffee
                 with its shadow cast by the sun"></figure>
     </section>
     <section id="overview">
