fix coffee section overflow

--- a/public/index.html
+++ b/public/index.html
@@ -116,6 +116,62 @@
                             <div class="coffee-item-wrap">
                                 <h3 class="coffee-item-origin">Colombia</h3>
                                 <p><span class="chips">Light</span>
+                                    <span class="chips">Anaerobic Natural</span>
+                                </p>
+                            </div>
+                        </li>
+                        <li class="coffee-item">
+                            <div class="coffee-item-wrap">
+                                <h3 class="coffee-item-name">Moon Geisha</h3>
+                                <p><span class="coffee-item-date">19/04/2023</span>
+                                    <span class="coffee-item-roaster">Jibbithelittles</span>
+                                </p>
+                            </div>
+                            <div class="coffee-item-wrap">
+                                <h3 class="coffee-item-origin">Colombia</h3>
+                                <p><span class="chips">Light</span>
+                                    <span class="chips">Natural</span>
+                                </p>
+                            </div>
+                        </li>
+                        <li class="coffee-item">
+                            <div class="coffee-item-wrap">
+                                <h3 class="coffee-item-name">Moon Geisha</h3>
+                                <p><span class="coffee-item-date">19/04/2023</span>
+                                    <span class="coffee-item-roaster">Jibbithelittles</span>
+                                </p>
+                            </div>
+                            <div class="coffee-item-wrap">
+                                <h3 class="coffee-item-origin">Colombia</h3>
+                                <p><span class="chips">Light</span>
+                                    <span class="chips">Natural</span>
+                                </p>
+                            </div>
+                        </li>
+                        <li class="coffee-item">
+                            <div class="coffee-item-wrap">
+                                <h3 class="coffee-item-name">Moon Geisha</h3>
+                                <p><span class="coffee-item-date">19/04/2023</span>
+                                    <span class="coffee-item-roaster">Jibbithelittles</span>
+                                </p>
+                            </div>
+                            <div class="coffee-item-wrap">
+                                <h3 class="coffee-item-origin">Colombia</h3>
+                                <p><span class="chips">Light</span>
+                                    <span class="chips">Natural</span>
+                                </p>
+                            </div>
+                        </li>
+                        <li class="coffee-item">
+                            <div class="coffee-item-wrap">
+                                <h3 class="coffee-item-name">Moon Geisha</h3>
+                                <p><span class="coffee-item-date">19/04/2023</span>
+                                    <span class="coffee-item-roaster">Jibbithelittles</span>
+                                </p>
+                            </div>
+                            <div class="coffee-item-wrap">
+                                <h3 class="coffee-item-origin">Colombia</h3>
+                                <p><span class="chips">Light</span>
                                     <span class="chips">Natural</span>
                                 </p>
                             </div>
