added some styling to form

--- a/public/index.html
+++ b/public/index.html
@@ -224,14 +224,14 @@
                                 <div class="form-item">
                                     <label for="coffeeName">coffee called</label>
                                     <input type="text" id="coffeeName" name="coffeeName"
-                                        placeholder="type the coffee name" class="text-field">
+                                        placeholder="type the coffee name" size="30" class="text-field">
                                 </div>
                             </div>
                             <div class="form-row">
                                 <div class="form-item">
                                     <label for="roasterName">It was roasted by</label>
                                     <input type="text" id="roasterName" name="roasterName"
-                                        placeholder="type the roaster name"  class="text-field">
+                                        placeholder="type the roaster name" size="30" class="text-field">
                                 </div>
                                 <div class="form-item">
                                     <label for="roasterCountry">from</label>
